@@ -49,6 +49,8 @@
 namespace VSTGUI {
 
 //-----------------------------------------------------------------------------
+/// @cond ignore
+//-----------------------------------------------------------------------------
 template <class T> class ScopePointer
 {
 public:
@@ -258,6 +260,7 @@ bool UIDescWriter::writeNode (UINode* node, OutputStream& stream)
 	}
 	return result;
 }
+/// @endcond
 
 //-----------------------------------------------------------------------------
 //-----------------------------------------------------------------------------
